# vr_teleop

./: .gitmodules  CMakeLists.txt  README.md  how_to_run.txt  mapping_rules.yaml  old_installation.txt  package.xml
dual_arm_teleop/: CMakeLists.txt  package.xml
dual_arm_teleop/include/dual_arm_teleop/: robot_arm.h  unity_arm.h  unity_teleop.hpp
dual_arm_teleop/launch/: default.rviz  dual_arm_teleop_node.launch  moveit.rviz  moveit_rviz.launch  rviz.launch  unity_teleop.launch
dual_arm_teleop/meshes/vr_controller_vive_1_5/: status.mtl  vr_controller_vive_1_5.json
dual_arm_teleop/meshes/vr_controller_vive_1_5_fixed/: vr_controller_vive_1_5.dae
dual_arm_teleop/scripts/: initialize_fake_victor.py  initialize_real_victor.py  make_victor_fast.py
dual_arm_teleop/src/: #unity_arm.cpp#  .#unity_arm.cpp  RobotArm.cpp  RobotArm.h  dual_arm_teleop_node.cpp  robot_arm.cpp  robot_arm.h  unity_arm.cpp  unity_arm.h  unity_teleop.cpp
dual_arm_teleop/srv/: SetEnabled.srv
dual_arm_teleop_publisher/: CMakeLists.txt  package.xml
dual_arm_teleop_publisher/src/: dual_arm_teleop_publisher_node.cpp
image_utils/: CMakeLists.txt  package.xml
image_utils/launch/: record_kinect.launch
image_utils/src/: video_recorder.cpp
launch/: dual_arm_teleop_node.launch
msg/: Controller.msg  HeadMountedDisplay.msg  VirtualRealitySystem.msg  ViveSystem.msg
openvr_ros_driver/: CMakeLists.txt  package.xml
openvr_ros_driver/src/: openvr_driver.cpp  openvr_driver.h  openvr_ros_driver_node.cpp
scripted_motion/: CMakeLists.txt  package.xml
scripted_motion/scripts/: scripted_takeover.py
src/: dual_arm_teleop_node.cpp  openvr_driver_node.cpp
src/topics/: listenerJoy.cpp  talkerJoy.cpp
unity_launch_files/: CMakeLists.txt  package.xml
unity_launch_files/launch/: publish_victor_description.launch  record_kinect.launch  unity_setup.launch
unity_launch_files/scripts/: kinect_pose_publisher.py
vive_msgs/: package.xml
vive_msgs/msg/: Controller.msg
