<?xml version="1.0"?>
<package format="2">
  <name>vive_msgs</name>
  <version>0.0.0</version>
  <description>The vive_msgs package</description>

  <maintainer email="andriym@todo.todo">andriym</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
